--- a/index.html
+++ b/index.html
@@ -14,13 +14,17 @@
             <img src="https://www.boolean.careers/images/misc/logo.png" alt="Logo Boolean">
         </div>
         <div class="new-todo">
-            <input type="text" v-model="newToDo" placeholder="Nuovo Todo">
-            <button>Aggiungi</button>
+            <input type="text" v-model="newToDo" placeholder="Nuovo Todo" @keyUp.enter="addToDo">
+            <button @click="addToDo">Aggiungi</button>
         </div>
         <div class="list">
-            <ul>
-                <li v-for="toDo in toDos">{{ toDo }} <i class="fas fa-times"></i></li>
+            <ul v-if="toDos.length > 0">
+                <li v-for="toDo in toDos">
+                    {{ toDo }}
+                    <i class="fas fa-times" @click="removeToDo(index)"></i>
+                </li>
             </ul>
+            <h4 v-else>Non ci sono Todo</h4>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
